more notebook work + cleaning

--- a/Dataset Generator.ipynb
+++ b/Dataset Generator.ipynb
@@ -2,15 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import requests\n",
-    "import requests_cache\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "%matplotlib inline"
@@ -18,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -112,7 +110,7 @@
        "4        United States Naval Academy   Yes  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +122,7 @@
     "# Add in needed columns and clean data\n",
     "# BA University, BA University Public/Private, BA University White %, BA University Lat/Lng, DeVos Vote\n",
     "\n",
-    "def clean_instnm(school):\n",
+    "def clean_INSTNM(school):\n",
     "    ba = [school for school in school.split(\"\\n\") if \"(B\" in school]\n",
     "    if len(ba) == 0: # John Boozeman\n",
     "        ba = [school for school in school.split(\"\\n\") if \"(O\" in school]\n",
@@ -155,7 +153,7 @@
     "senators = pd.read_csv(\"senators.csv\")\n",
     "senators = senators[[\"State\", \"Name\", \"Party\", \"Education\"]]\n",
     "# CHANGE TO FUNCTION THAT ACCOUNTS FOR 'ATTENDED'\n",
-    "senators[\"INSTNM\"] = senators[\"Education\"].apply(lambda x: clean_instnm(x))\n",
+    "senators[\"INSTNM\"] = senators[\"Education\"].apply(lambda x: clean_INSTNM(x))\n",
     "senators[\"Party\"] = senators[\"Party\"].apply(lambda x: clean_party(x))\n",
     "senators[\"DeVos\"] = senators.apply(lambda x: devos(x), axis=1)\n",
     "\n",
@@ -164,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -186,6 +184,7 @@
        "      <th>CONTROL</th>\n",
        "      <th>UGDS</th>\n",
        "      <th>UGDS_WHITE</th>\n",
+       "      <th>COSTT4_A</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -200,6 +199,7 @@
        "      <td>Public</td>\n",
        "      <td>4206</td>\n",
        "      <td>0.0333</td>\n",
+       "      <td>21475</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -212,6 +212,7 @@
        "      <td>Public</td>\n",
        "      <td>11383</td>\n",
        "      <td>0.5922</td>\n",
+       "      <td>20621</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -224,6 +225,7 @@
        "      <td>Private nonprofit</td>\n",
        "      <td>291</td>\n",
        "      <td>0.2990</td>\n",
+       "      <td>16370</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -236,6 +238,7 @@
        "      <td>Public</td>\n",
        "      <td>5451</td>\n",
        "      <td>0.6988</td>\n",
+       "      <td>21107</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -248,6 +251,7 @@
        "      <td>Public</td>\n",
        "      <td>4811</td>\n",
        "      <td>0.0158</td>\n",
+       "      <td>18184</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -261,15 +265,15 @@
        "3  University of Alabama in Huntsville  Huntsville     AL       35899   \n",
        "4             Alabama State University  Montgomery     AL  36104-0271   \n",
        "\n",
-       "    LATITUDE  LONGITUDE            CONTROL   UGDS  UGDS_WHITE  \n",
-       "0  34.783368 -86.568502             Public   4206      0.0333  \n",
-       "1  33.502230 -86.809170             Public  11383      0.5922  \n",
-       "2  32.362609 -86.174010  Private nonprofit    291      0.2990  \n",
-       "3  34.722818 -86.638420             Public   5451      0.6988  \n",
-       "4  32.364317 -86.295677             Public   4811      0.0158  "
+       "    LATITUDE  LONGITUDE            CONTROL   UGDS  UGDS_WHITE  COSTT4_A  \n",
+       "0  34.783368 -86.568502             Public   4206      0.0333     21475  \n",
+       "1  33.502230 -86.809170             Public  11383      0.5922     20621  \n",
+       "2  32.362609 -86.174010  Private nonprofit    291      0.2990     16370  \n",
+       "3  34.722818 -86.638420             Public   5451      0.6988     21107  \n",
+       "4  32.364317 -86.295677             Public   4811      0.0158     18184  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +283,7 @@
     "# https://catalog.data.gov/dataset/college-scorecard\n",
     "\n",
     "# \"CONTROL\": 1 = Public, 2 = Private nonprofit, 3 = Private for-profit\n",
-    "def control_clean(number):\n",
+    "def clean_CONTROL(number):\n",
     "    if number == 1:\n",
     "        return \"Public\"\n",
     "    elif number == 2:\n",
@@ -288,8 +292,9 @@
     "        return \"Private for-profit\"\n",
     "\n",
     "universities = pd.read_csv(\"CollegeScorecard_Raw_Data/MERGED2014_15_PP.csv\")\n",
-    "universities = universities[[\"INSTNM\", \"CITY\", \"STABBR\", \"ZIP\", \"LATITUDE\", \"LONGITUDE\", \"CONTROL\", \"UGDS\", \"UGDS_WHITE\"]]\n",
-    "universities[\"CONTROL\"] = universities[\"CONTROL\"].apply(lambda x: control_clean(x))\n",
+    "universities = universities[[\"INSTNM\", \"CITY\", \"STABBR\", \"ZIP\", \"LATITUDE\", \"LONGITUDE\", \"CONTROL\", \n",
+    "                             \"UGDS\", \"UGDS_WHITE\", \"COSTT4_A\"]]\n",
+    "universities[\"CONTROL\"] = universities[\"CONTROL\"].apply(lambda x: clean_CONTROL(x))\n",
     "# \"UG\": Number of undergrads\n",
     "\n",
     "universities.head()"
@@ -297,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -324,6 +329,7 @@
        "      <th>CONTROL</th>\n",
        "      <th>UGDS</th>\n",
        "      <th>UGDS_WHITE</th>\n",
+       "      <th>COSTT4_A</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -343,6 +349,7 @@
        "      <td>Public</td>\n",
        "      <td>29851</td>\n",
        "      <td>0.7825</td>\n",
+       "      <td>26400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -360,6 +367,7 @@
        "      <td>Private nonprofit</td>\n",
        "      <td>7892</td>\n",
        "      <td>0.7138</td>\n",
+       "      <td>61055</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -377,6 +385,7 @@
        "      <td>Private nonprofit</td>\n",
        "      <td>7211</td>\n",
        "      <td>0.5813</td>\n",
+       "      <td>62179</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -394,6 +403,7 @@
        "      <td>Private nonprofit</td>\n",
        "      <td>7236</td>\n",
        "      <td>0.4527</td>\n",
+       "      <td>59950</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -403,6 +413,7 @@
        "      <td>United States Naval Academy (BS)</td>\n",
        "      <td>United States Naval Academy</td>\n",
        "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -438,15 +449,15 @@
        "3              Harvard University   Yes    Cambridge     MA       02138   \n",
        "4     United States Naval Academy   Yes          NaN    NaN         NaN   \n",
        "\n",
-       "    LATITUDE  LONGITUDE            CONTROL   UGDS  UGDS_WHITE  \n",
-       "0  33.214400 -87.545766             Public  29851      0.7825  \n",
-       "1  29.939696 -90.120409  Private nonprofit   7892      0.7138  \n",
-       "2  38.908809 -77.073463  Private nonprofit   7211      0.5813  \n",
-       "3  42.374429 -71.118177  Private nonprofit   7236      0.4527  \n",
-       "4        NaN        NaN                NaN    NaN         NaN  "
+       "    LATITUDE  LONGITUDE            CONTROL   UGDS  UGDS_WHITE  COSTT4_A  \n",
+       "0  33.214400 -87.545766             Public  29851      0.7825     26400  \n",
+       "1  29.939696 -90.120409  Private nonprofit   7892      0.7138     61055  \n",
+       "2  38.908809 -77.073463  Private nonprofit   7211      0.5813     62179  \n",
+       "3  42.374429 -71.118177  Private nonprofit   7236      0.4527     59950  \n",
+       "4        NaN        NaN                NaN    NaN         NaN       NaN  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -549,40 +560,40 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Party</th>\n",
-       "      <th>CONTROL</th>\n",
+       "      <th></th>\n",
        "      <th>Name</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DeVos</th>\n",
+       "      <th>CONTROL</th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Democratic</td>\n",
-       "      <td>Private nonprofit</td>\n",
-       "      <td>30</td>\n",
+       "      <th rowspan=\"3\" valign=\"top\">No</th>\n",
+       "      <th>Military</th>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Democratic</td>\n",
-       "      <td>Public</td>\n",
+       "      <th>Private nonprofit</th>\n",
+       "      <td>34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Public</th>\n",
        "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Independent</td>\n",
-       "      <td>Private nonprofit</td>\n",
+       "      <th rowspan=\"3\" valign=\"top\">Yes</th>\n",
+       "      <th>Military</th>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Republican</td>\n",
-       "      <td>Private nonprofit</td>\n",
-       "      <td>28</td>\n",
+       "      <th>Private nonprofit</th>\n",
+       "      <td>26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Republican</td>\n",
-       "      <td>Public</td>\n",
+       "      <th>Public</th>\n",
        "      <td>22</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -590,28 +601,32 @@
        "</div>"
       ],
       "text/plain": [
-       "         Party            CONTROL  Name\n",
-       "0   Democratic  Private nonprofit    30\n",
-       "1   Democratic             Public    15\n",
-       "2  Independent  Private nonprofit     2\n",
-       "3   Republican  Private nonprofit    28\n",
-       "4   Republican             Public    22"
+       "                         Name\n",
+       "DeVos CONTROL                \n",
+       "No    Military              1\n",
+       "      Private nonprofit    34\n",
+       "      Public               15\n",
+       "Yes   Military              2\n",
+       "      Private nonprofit    26\n",
+       "      Public               22"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Now to our analyses! \n",
+    "senator_univs[\"CONTROL\"] = senator_univs[\"CONTROL\"].fillna(\"Military\")\n",
+    "senator_univs.groupby([\"DeVos\", \"CONTROL\"]).count()[[\"Name\"]]\n",
     "\n",
-    "senator_univs.groupby([\"Party\", \"CONTROL\"]).count().reset_index()[[\"Party\", \"CONTROL\", \"Name\"]]"
+    "# Republicans went to more public schools, as a percentage, than Democrats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -629,10 +644,12 @@
        "      <th>LONGITUDE</th>\n",
        "      <th>UGDS</th>\n",
        "      <th>UGDS_WHITE</th>\n",
+       "      <th>COSTT4_A</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>DeVos</th>\n",
        "      <th>Party</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -643,53 +660,60 @@
        "    <tr>\n",
        "      <th rowspan=\"3\" valign=\"top\">No</th>\n",
        "      <th>Democratic</th>\n",
-       "      <td>39.775828</td>\n",
-       "      <td>-89.981898</td>\n",
-       "      <td>10735.066667</td>\n",
-       "      <td>0.548142</td>\n",
+       "      <td>40.727105</td>\n",
+       "      <td>-79.953926</td>\n",
+       "      <td>7018.0</td>\n",
+       "      <td>0.53290</td>\n",
+       "      <td>59730.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Independent</th>\n",
        "      <td>42.746625</td>\n",
        "      <td>-79.945573</td>\n",
-       "      <td>4956.500000</td>\n",
-       "      <td>0.464750</td>\n",
+       "      <td>4956.5</td>\n",
+       "      <td>0.46475</td>\n",
+       "      <td>64133.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Republican</th>\n",
        "      <td>41.749344</td>\n",
        "      <td>-76.117403</td>\n",
-       "      <td>4746.500000</td>\n",
-       "      <td>0.686550</td>\n",
+       "      <td>4746.5</td>\n",
+       "      <td>0.68655</td>\n",
+       "      <td>60864.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Yes</th>\n",
        "      <th>Republican</th>\n",
-       "      <td>37.888485</td>\n",
-       "      <td>-90.243583</td>\n",
-       "      <td>15297.319149</td>\n",
-       "      <td>0.653591</td>\n",
+       "      <td>38.557201</td>\n",
+       "      <td>-89.539377</td>\n",
+       "      <td>13117.0</td>\n",
+       "      <td>0.71380</td>\n",
+       "      <td>25918.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    LATITUDE  LONGITUDE          UGDS  UGDS_WHITE\n",
-       "DeVos Party                                                      \n",
-       "No    Democratic   39.775828 -89.981898  10735.066667    0.548142\n",
-       "      Independent  42.746625 -79.945573   4956.500000    0.464750\n",
-       "      Republican   41.749344 -76.117403   4746.500000    0.686550\n",
-       "Yes   Republican   37.888485 -90.243583  15297.319149    0.653591"
+       "                    LATITUDE  LONGITUDE     UGDS  UGDS_WHITE  COSTT4_A\n",
+       "DeVos Party                                                           \n",
+       "No    Democratic   40.727105 -79.953926   7018.0     0.53290   59730.0\n",
+       "      Independent  42.746625 -79.945573   4956.5     0.46475   64133.5\n",
+       "      Republican   41.749344 -76.117403   4746.5     0.68655   60864.5\n",
+       "Yes   Republican   38.557201 -89.539377  13117.0     0.71380   25918.0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "senator_univs.groupby([\"DeVos\", \"Party\"]).mean()"
+    "senator_univs.groupby([\"DeVos\", \"Party\"]).median()\n",
+    "\n",
+    "# Republicans also went to whiter schools, but paid less\n",
+    "# Lot of land-grant public universities, maybe?"
    ]
   },
   {
@@ -699,7 +723,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# The story is that, ..."
+   ]
   }
  ],
  "metadata": {
